tests/ui/limits/huge-enum.stderr
error: values of the type `Option<TYPE>` are too big for the target architecture
  --> $DIR/huge-enum.rs:15:9
   |
LL |     let big: BIG = None;
   |         ^^^

error: aborting due to 1 previous error

